# ee-chinese-filtering

./: .deepsource.toml  .gitignore  benchmark.py  generate_results.py  pyproject.toml  requirements.txt  tests.py
algorithms/python/: pyproject.toml
algorithms/python/chinese_filter/: __init__.py  _common.py  ac.py  brute_force.py  native.py  wm.py
algorithms/python/tests/: benchmark.py  tests.py
blocklist/: blocklist_10.txt  blocklist_100.txt  blocklist_10k.txt  blocklist_1k.txt  blocklist_full.txt  blocklist_wm.txt  generate_blocklist.py
blocklist/raw/: pub_banned_words.txt  pub_sms_banned_words.txt  sensitive_words.txt
results/: 20230712-160711.csv  20230715-015948.csv  20230715-022812.csv  python.txt  results.csv
src/: __init__.py  profile.py
src/algorithms/: __init__.py  ac.py  brute_force.py  native.py  wm.py
src/radical_dict/: __init__.py  generate_dict.py
tests/: 1_short.txt  2_medium.txt  3_long.txt
tests/res/: 1_short.json  2_medium.json  3_long.json
tests/res/10/naive/: 1_short.json  3_long.json
tests/res/10/pinyin/: 1_short.json  2_medium.json  3_long.json
tests/res/10/radical/: 1_short.json  2_medium.json
tests/res/10/radical_pinyin/: 1_short.json  2_medium.json  3_long.json
tests/res/100/naive/: 3_long.json
tests/res/100/pinyin/: 1_short.json  2_medium.json  3_long.json
tests/res/100/radical/: 1_short.json  3_long.json
tests/res/100/radical_pinyin/: 1_short.json  2_medium.json  3_long.json
tests/res/pinyin/: 3_long.json
tests/res/radical/: 2_medium.json
tests/res/radical_pinyin/: 1_short.json  2_medium.json
(+19 files in other folders)
