[project]
name = ""
version = ""
description = ""
authors = [
    { name = "Frank", email = "25704248+leranjun@users.noreply.github.com" },
]
dependencies = [
    "memory-profiler>=0.61.0",
    "pypinyin>=0.49.0",
    "pinyintokenizer>=0.0.2",
    "text-unidecode>=1.3",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["mypy>=1.4.1", "pylint>=2.17.4", "black>=23.7.0"]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true
